[gd_scene load_steps=13 format=3 uid="uid://1ma6ldadgmhj"]

[ext_resource type="Script" uid="uid://mv4ps6p0g7qp" path="res://assets/danmaku/emitter/danmaku_emitter.gd" id="2_cwfce"]
[ext_resource type="Script" uid="uid://ccqqsgs2ctotb" path="res://assets/danmaku/emitter/emitter_mesh_display.gd" id="3_cwfce"]

[sub_resource type="SphereMesh" id="SphereMesh_cwfce"]
radius = 0.1
height = 0.2
radial_segments = 8
rings = 4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cwfce"]
transparency = 4
cull_mode = 2
shading_mode = 2
diffuse_mode = 2
albedo_color = Color(1, 0.55, 0.1, 0.3)

[sub_resource type="ImmediateMesh" id="ImmediateMesh_qtapo"]

[sub_resource type="MultiMesh" id="MultiMesh_cwfce"]
transform_format = 1
instance_count = 3
mesh = SubResource("ImmediateMesh_qtapo")
buffer = PackedFloat32Array(-0.5, -0.866025, 0, 0, 0.866025, -0.5, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.5, 0.866025, 0, 0, -0.866025, -0.5, 0, 0, 0, 0, 1, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i1atn"]
transparency = 4
shading_mode = 2
albedo_color = Color(0.3, 0.3, 1, 0.698039)

[sub_resource type="BoxMesh" id="BoxMesh_cwfce"]
size = Vector3(0.02, 0.02, 1)

[sub_resource type="MultiMesh" id="MultiMesh_ldqey"]
transform_format = 1
use_colors = true
instance_count = 9
mesh = SubResource("BoxMesh_cwfce")
buffer = PackedFloat32Array(-0.75099, 0.498512, -0.866026, 0.433013, 0.00660281, 0.661405, 1.5, -0.75, 0.660281, 0.560383, -1, 0.5, 0, 0, 0, 0, 1, -9.18455e-19, -1.83691e-16, 9.18455e-17, 9.18455e-19, 1, 3.18162e-16, -1.59081e-16, 9.18455e-17, -1.59081e-16, 2, -1, 0, 0, 0, 0, -0.76071, 0.483549, 0.866026, -0.433013, -0.00649059, 0.661406, -1.5, 0.75, -0.649059, -0.573343, -1, 0.5, 0, 0, 0, 0, -0.499981, -0.00432996, 1.73205, -0.866025, -0.00865993, 0.999963, 0, 0, -0.865993, -0.00749972, -1, 0.5, 0, 0, 0, 0, 1, 1.83691e-18, 3.67382e-16, -1.83691e-16, -1.83691e-18, 1, 0, 0, -1.83691e-16, -3.37424e-34, 2, -1, 0, 0, 0, 0, -0.499981, 0.00432996, -1.73205, 0.866025, 0.00865993, 0.999963, 0, 0, 0.865993, -0.00749972, -1, 0.5, 0, 0, 0, 0, -0.76071, -0.483549, -0.866026, 0.433013, 0.00649059, 0.661406, -1.5, 0.75, 0.649059, -0.573343, -1, 0.5, 0, 0, 0, 0, 1, -9.18455e-19, -1.83691e-16, 9.18455e-17, 9.18455e-19, 1, -3.18162e-16, 1.59081e-16, 9.18455e-17, 1.59081e-16, 2, -1, 0, 0, 0, 0, -0.75099, -0.498512, 0.866026, -0.433013, -0.00660281, 0.661405, 1.5, -0.75, -0.660281, 0.560383, -1, 0.5, 0, 0, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xdepa"]
transparency = 4
shading_mode = 2
albedo_color = Color(1, 0.2, 0.2, 0.8)

[sub_resource type="BoxMesh" id="BoxMesh_xdepa"]
size = Vector3(0.02, 0.02, 0.02)

[sub_resource type="MultiMesh" id="MultiMesh_xdepa"]
transform_format = 1
mesh = SubResource("BoxMesh_xdepa")

[node name="DanmakuEmitter" type="MeshInstance3D"]
process_mode = 1
cast_shadow = 0
mesh = SubResource("SphereMesh_cwfce")
script = ExtResource("2_cwfce")
disk_count = 3
stripe_count = 3

[node name="EmitterMeshDisplay" type="Node3D" parent="."]
script = ExtResource("3_cwfce")

[node name="DiskMMI3D" type="MultiMeshInstance3D" parent="EmitterMeshDisplay"]
physics_interpolation_mode = 2
material_override = SubResource("StandardMaterial3D_cwfce")
cast_shadow = 0
multimesh = SubResource("MultiMesh_cwfce")

[node name="StripeMMI3D" type="MultiMeshInstance3D" parent="EmitterMeshDisplay"]
physics_interpolation_mode = 2
material_override = SubResource("StandardMaterial3D_i1atn")
cast_shadow = 0
multimesh = SubResource("MultiMesh_ldqey")

[node name="SphericalMMI3D" type="MultiMeshInstance3D" parent="EmitterMeshDisplay"]
physics_interpolation_mode = 2
material_override = SubResource("StandardMaterial3D_xdepa")
cast_shadow = 0
multimesh = SubResource("MultiMesh_xdepa")

[node name="BulletWare" type="Node3D" parent="."]
